@@ -1,5 +1,5 @@
 #
-# $Id: treeview.test,v 1.7 2010/05/27 19:27:04 jenglish Exp $
+# $Id: treeview.test,v 1.8 2010/10/11 21:34:45 jenglish Exp $
 #
 # [7Jun2005] TO CHECK: [$tv see {}] -- shouldn't work (at least, shouldn't do
 # what it currently does)
@@ -571,7 +571,7 @@ test treeview-identify-8 "identify element" -body {
 } -match glob -result [list \
 	branch $disclosure branch2 $disclosure branch3 $disclosure]
 
-# See #2381555 
+# See #2381555
 test treeview-identify-9 "identify works when horizontally scrolled" -setup {
     .tv configure -show {tree headings}
     foreach column {#0 A B C} {
@@ -617,5 +617,25 @@ test treeview-3006842 "Null bindings" -setup {
 } -result {} -cleanup {
     destroy .tv
 }
+
+test treeview-3085489-1 "tag add, no -tags" -setup {
+    ttk::treeview .tv
+} -body {
+    set item [.tv insert {} end]
+    .tv tag add foo $item
+    .tv item $item -tags
+} -cleanup {
+    destroy .tv
+} -result [list foo]
+
+test treeview-3085489-2 "tag remove, no -tags" -setup {
+    ttk::treeview .tv
+} -body {
+    set item [.tv insert {} end]
+    .tv tag remove foo $item
+    .tv item $item -tags
+} -cleanup {
+    destroy .tv
+} -result [list]
 
 tcltest::cleanupTests
